# catkin_ws

./: README.md  frames.gv
devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
logs/catkin_tools_prebuild/: build.cmake.000.log.stderr
logs/dynamic_tutorials/: build.check.003.log.stderr  build.check.004.log.stderr  build.cmake.001.log.stderr  build.cmake.003.log.stderr  build.cmake.004.log.stderr  build.make.001.log.stderr  build.make.003.log.stderr  build.make.005.log.stderr  build.make.007.log.stderr
logs/otimizador/: build.check.001.log.stderr  build.check.005.log.stderr  build.check.007.log.stderr  build.check.017.log.stderr  build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.cmake.004.log.stderr  build.make.000.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.007.log.stderr  build.make.010.log.stderr  build.make.015.log.stderr  build.make.016.log.stderr  build.make.020.log.stderr  build.make.024.log.stderr  build.make.025.log.stderr  build.make.027.log.stderr  build.make.029.log.stderr  build.make.031.log.stderr  build.make.032.log.stderr  build.make.035.log.stderr  build.make.036.log.stderr  (+66 more)
src/: ros_best_practices
src/otimizador/: CMakeLists.txt  goal_orientation_set_strategies
src/otimizador/config/: visualization.yaml
src/otimizador/launch/: otimizador.launch
src/otimizador/src/: Firefly.cpp  Firefly.h  FireflyAlgorithm.h  OptimizationMethods.cpp  OptimizationMethods.h  bkp.lua  map.txt  otimizador.cpp  otm_bkp.cpp  para_robo.cpp  robot_driver.cpp  script.lua  test.lua  test2.lua
(+1490 files in other folders)
